# pysj

./: .gitignore  LICENSE  Makefile  README.md  dodo.py  pyproject.toml  run.sh
pysj/: __init__.py  crypto.py  exjson.py  formats.py  main.py  nanoservice.py  ndjson.py  overengineer.py
tests/: test_Crypto.py  test_ExtendedJSONEncoder.py  test_ExtendedJSONTranscoding.py  test_ExtendedNDJSONTranscoding.py  test_Flatten.py  test_MiniService.py  test_NanoService.py  test_Paginate.py  test_Point.py  test_PythonVersion.py  test_Seconds.py  test_Timer.py  test_chunk.py  test_first.py  test_formats.py  test_iso.py  test_json_and_ndjson_dump_and_load.py  test_months_in_interval.py  test_moving_average.py  test_n_wise.py  test_take.py  test_transpose.py
