[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pysj"
authors = [{name = "Sondre S. Ødegård"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[dependencies]
numpy = {}

[dev-dependencies]
black = {}
"hypothesis[cli]" = {}
pytest = {}
