[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pysj"
authors = [{name = "Sondre S. Ødegård"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.6"
classifiers = ["License :: OSI Approved :: MIT License",  "Topic :: Software Development"]
dynamic = ["version", "description"]

[project.urls]
source = "https://github.com/sondreod/pysj"
documentation = "https://github.com/sondreod/pysj"

[dependencies]
numpy = {}

[dev-dependencies]
black = {}
"hypothesis[cli]" = {}
pytest = {}
